samples/_failures_safe/1761710920_be6346_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49f5cfcd.c: In function ‘parse_assignment’:
./samples/SAFE/__tmp_49f5cfcd.c:150:5: error: expected declaration or statement at end of input
  150 |     } else {
      |     ^
./samples/SAFE/__tmp_49f5cfcd.c:150:5: error: expected declaration or statement at end of input
